--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "lodash": "^4.17.15",
     "body-scroll-lock": "^2.5.10",
-    "vue-gravatar": "^1.3.0"
+    "vue-gravatar": "^1.3.0",
+    "normalize.css": "^8.0.1"
   }
 }
