--- a/package.json
+++ b/package.json
@@ -1,21 +1,40 @@
 {
-  "name": "@fastybird-com/theme",
-  "version": "1.0.0",
-  "description": "Basic theme for FastyBird apps",
+  "name": "@fastybird-com/ui-theme",
+  "version": "0.1.0",
+  "description": "FastyBird basic theme & Vue components for web apps",
   "keywords": [
     "fastybird",
-    "basic ui"
+    "fb",
+    "ui",
+    "components",
+    "vue"
   ],
-  "author": "FastyBird s.r.o.",
-  "license": "ISC",
-  "homepage": "https://bitbucket.org/fastybird/fastybird-app-theme",
+
+  "homepage": "https://www.fastybird.com",
+
+  "bugs": "https://github.com/FastyBird/ui-theme/issues",
+
+  "license": "Apache-2.0",
+
+  "author": {
+    "name": "FastyBird s.r.o.",
+    "email": "info@fastybird.com",
+    "url": "https://www.fastybird.com/"
+  },
+
   "repository": {
     "type": "git",
-    "url": "https://akadlec@bitbucket.org/fastybird/fastybird-app-theme.git"
+    "url": "https://github.com/FastyBird/ui-theme.git"
   },
+
   "dependencies": {
     "body-scroll-lock": "^2.5.10",
     "vue-gravatar": "^1.3.0",
     "normalize.css": "^8.0.1"
+  },
+
+  "engines": {
+    "node": ">= 11.7.1",
+    "yarn": ">= 1.12.0"
   }
 }
