--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,48 @@
+# MacOS
 .DS_Store
-node_modules
 
-# local env files
-.env.local
-.env.*.local
+# Thumbnails
+._*
 
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-pnpm-error.log*
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
-.rts2_cache_cjs
-.rts2_cache_es
-.rts2_cache_umd
+# Windows thumbnail cache files
+Thumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# IntellijIDEA
+*.iml
+*.iws
+*.ipr
+.idea/
+
+# VSCode
+.vscode/*
+.history
+
+# npm
+node_modules/
+
+
+yarn-error\.log
+
+dist/
