--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "@fastybird/web-ui-theme",
-  "type": "module",
   "version": "0.1.0",
   "description": "FastyBird basic theme & Vue components for web apps",
   "keywords": [
@@ -10,51 +9,53 @@
     "components",
     "vue"
   ],
-
   "homepage": "https://www.fastybird.com",
-
   "bugs": "https://github.com/FastyBird/web-ui-theme/issues",
-
   "license": "Apache-2.0",
-
   "author": {
     "name": "FastyBird s.r.o.",
     "email": "info@fastybird.com",
     "url": "https://www.fastybird.com/"
   },
-
   "repository": {
     "type": "git",
     "url": "https://github.com/FastyBird/web-ui-theme.git"
   },
-
   "dependencies": {
     "body-scroll-lock": "^2.5.10",
-    "vue": "^2.6.11",
-    "vue-gravatar": "^1.3.0",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "vue-gravatar": "^1.3.0"
   },
-
   "devDependencies": {
-    "microbundle": "^0.12.3"
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "concurrently": "^3.5.1",
+    "gh-pages": "^1.1.0",
+    "node-sass": "^4.14.1",
+    "rollup": "^0.59.4",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-vue": "^4.2.0",
+    "rollup-plugin-vue-inline-svg": "^1.1.1",
+    "vue-template-compiler": "^2.5.16"
   },
-
-  "source": "src/index.ts",
-
-  "main": "dist/web-ui-theme.js",
-  "module": "dist/web-ui-theme.module.js",
-  "unpkg": "dist/web-ui-theme.umd.js",
-  "typings": "dist/index.d.ts",
-
+  "peerDependencies": {
+    "vue": "^2.5.16"
+  },
   "scripts": {
-    "build": "microbundle src/index.ts --name VueWampV1",
-    "dev": "microbundle watch"
+    "build:lib": "rollup -c",
+    "build": "yarn build:lib",
+    "dev": "concurrently --kill-others \"yarn dev:lib\"",
+    "dev:lib": "yarn copyuithemecsstodis && rollup -c -w",
+    "copyuithemecsstodis": "mkdir -p dist && cp -r node_modules/@fastybird/web-ui-theme/dist/assets/css node_modules/@fastybird/web-ui-theme/dist/assets/fonts node_modules/@fastybird/web-ui-theme/dist/assets/images dist/"
   },
-
+  "main": "/dist/web-ui-theme.js",
   "engines": {
     "node": ">= 11.7.1",
     "yarn": ">= 1.12.0"
   },
-
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  }
 }
