--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "url": "https://github.com/FastyBird/web-ui-theme.git"
   },
   "dependencies": {
-    "body-scroll-lock": "^2.5.10",
-    "normalize.css": "^8.0.1",
-    "vue-gravatar": "^1.3.0"
+    "body-scroll-lock": "^3.0.0",
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -36,8 +35,8 @@
     "rollup": "^0.59.4",
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-vue": "^4.2.0",
-    "rollup-plugin-vue-inline-svg": "^1.1.1",
+    "rollup-plugin-vue": "4.2.0",
+    "vue-runtime-helpers": "0.2.0",
     "vue-template-compiler": "^2.5.16"
   },
   "peerDependencies": {
