--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@fastybird/web-ui-theme",
-  "type": "module",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "FastyBird basic theme & Vue components for web apps",
   "keywords": [
     "fastybird",
@@ -10,51 +9,70 @@
     "components",
     "vue"
   ],
+
   "homepage": "https://www.fastybird.com",
+
   "bugs": "https://github.com/FastyBird/web-ui-theme/issues",
+
   "license": "Apache-2.0",
+
   "author": {
     "name": "FastyBird s.r.o.",
     "email": "info@fastybird.com",
     "url": "https://www.fastybird.com/"
   },
+
   "repository": {
     "type": "git",
     "url": "https://github.com/FastyBird/web-ui-theme.git"
   },
+
+  "main": "dist/web-ui-theme.ssr.js",
+  "browser": "dist/web-ui-theme.esm.js",
+  "module": "dist/web-ui-theme.esm.js",
+  "unpkg": "dist/web-ui-theme.min.js",
+
+  "files": [
+    "dist/*",
+    "src/**/*.vue"
+  ],
+
+  "scripts": {
+    "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
+    "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
+    "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
+    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife"
+  },
+
   "dependencies": {
     "body-scroll-lock": "^3.0.0",
     "normalize.css": "^8.0.1"
   },
+
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "concurrently": "^3.5.1",
-    "gh-pages": "^1.1.0",
-    "node-sass": "^4.14.1",
-    "rollup": "^0.59.4",
-    "rollup-plugin-babel": "^3.0.4",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-vue": "4.2.0",
-    "vue-runtime-helpers": "0.2.0",
-    "vue-template-compiler": "^2.5.16"
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@rollup/plugin-alias": "^2.2.0",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-replace": "^2.3.2",
+    "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-service": "^4.3.1",
+    "cross-env": "^7.0.2",
+    "minimist": "^1.2.5",
+    "rollup": "^2.7.3",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-vue": "^5.1.6",
+    "vue": "^2.6.11",
+    "vue-template-compiler": "^2.6.11"
   },
   "peerDependencies": {
-    "vue": "^2.5.16"
+    "vue": "^2.6.11"
   },
-  "scripts": {
-    "build:lib": "rollup -c",
-    "build": "yarn build:lib",
-    "dev": "concurrently --kill-others \"yarn dev:lib\"",
-    "dev:lib": "yarn copyuithemecsstodis && rollup -c -w",
-    "copyuithemecsstodis": "mkdir -p dist && cp -r node_modules/@fastybird/web-ui-theme/dist/assets/css node_modules/@fastybird/web-ui-theme/dist/assets/fonts node_modules/@fastybird/web-ui-theme/dist/assets/images dist/"
-  },
-  "main": "/dist/web-ui-theme.js",
   "engines": {
-    "node": ">= 11.7.1",
-    "yarn": ">= 1.12.0"
+    "node": ">=10"
   },
+
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   }
