--- a/package.json
+++ b/package.json
@@ -9,46 +9,37 @@
     "components",
     "vue"
   ],
-
   "homepage": "https://www.fastybird.com",
-
   "bugs": "https://github.com/FastyBird/web-ui-theme/issues",
-
   "license": "Apache-2.0",
-
   "author": {
     "name": "FastyBird s.r.o.",
     "email": "info@fastybird.com",
     "url": "https://www.fastybird.com/"
   },
-
   "repository": {
     "type": "git",
     "url": "https://github.com/FastyBird/web-ui-theme.git"
   },
-
   "main": "dist/web-ui-theme.ssr.js",
   "browser": "dist/web-ui-theme.esm.js",
   "module": "dist/web-ui-theme.esm.js",
   "unpkg": "dist/web-ui-theme.min.js",
-
   "files": [
     "dist/*",
     "src/**/*.vue"
   ],
-
   "scripts": {
     "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
     "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
     "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
     "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife"
   },
-
   "dependencies": {
     "body-scroll-lock": "^3.0.0",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "vue-gravatar": "^1.3.1"
   },
-
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
@@ -72,7 +63,6 @@
   "engines": {
     "node": ">=10"
   },
-
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   }
