--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/preset-typescript": "^7.9.0",
     "@rollup/plugin-alias": "^2.2.0",
     "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-replace": "^2.3.2",
     "@types/body-scroll-lock": "^2.6.1",
     "@types/lodash.get": "^4.4.6",
