--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,28 @@
-# MacOS
 .DS_Store
+node_modules
+dist
+yarn.lock
 
-# Thumbnails
-._*
+# local env files
+.env.local
+.env.*.local
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+pnpm-error.log*
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Windows thumbnail cache files
-Thumbs.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# IntellijIDEA
-*.iml
-*.iws
-*.ipr
-.idea/
-
-# VSCode
-.vscode/*
-.history
-
-# npm
-node_modules/
-
-
-yarn-error\.log
-
-# Enable after finishing deployment
-#dist/
+.rts2_cache_cjs
+.rts2_cache_es
+.rts2_cache_umd
