--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
         "module": "esnext",
         "strict": true,
         "declaration": true,
-        "declarationDir": "dist",
+        "declarationDir": "dist/dts",
+        "emitDeclarationOnly": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "importHelpers": true,
@@ -13,14 +14,21 @@
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "sourceMap": true,
+        "noImplicitAny": false,
         "baseUrl": ".",
         "types": [
             "node",
-            "vue"
+            "vue",
+            "@nuxt/types",
+            "@types/body-scroll-lock",
+            "@types/lodash.get"
         ],
         "paths": {
             "@/*": [
                 "src/*"
+            ],
+            "~/*": [
+                "types/*"
             ]
         },
         "lib": [
