--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   "browser": "dist/web-ui-theme.esm.js",
   "module": "dist/web-ui-theme.esm.js",
   "unpkg": "dist/web-ui-theme.min.js",
-  "types": "types/web-ui-theme.d.ts",
+  "types": "src/types/web-ui-theme.d.ts",
   "files": [
     "dist/*",
-    "types/*",
     "src/**/*.vue",
-    "src/assets"
+    "src/assets/*",
+    "src/type/*"
   ],
   "scripts": {
     "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
@@ -64,7 +64,9 @@
     "cross-env": "^7.0",
     "minimist": "^1.2",
     "rollup": "^2.7",
+    "rollup-plugin-dts": "^3.0",
     "rollup-plugin-terser": "^5.3",
+    "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-vue": "^5.1",
     "tslib": "^2.2",
     "typescript": "^4.3",
