--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "rollup-plugin-terser": "^5.3",
     "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-vue": "^5.1",
+    "sass-loader": "^10.2.0",
     "tslib": "^2.2",
     "typescript": "^4.3",
     "vue": "^2.6",
