--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -264,6 +264,6 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: master
-          FOLDER: docs-build
+          FOLDER: storybook-static
           CLEAN: true
           TARGET_FOLDER: docs
