--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fastybird/web-ui-theme",
-  "version": "0.1.0",
+  "version": "0.2.2",
   "description": "FastyBird basic theme & Vue components for web apps",
   "keywords": [
     "fastybird",
@@ -28,8 +28,8 @@
   "types": "web-ui-theme.d.ts",
   "files": [
     "dist/*",
-    "src/**/*.vue",
-    "src/**/*.scss",
+    "src/components/**/*.vue",
+    "src/components/**/*.scss",
     "src/assets/*",
     "web-ui-theme.d.ts"
   ],
@@ -56,9 +56,9 @@
     "@babel/plugin-proposal-class-properties": "^7.10",
     "@babel/preset-env": "^7.9",
     "@babel/preset-typescript": "^7.9",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15",
+    "@fortawesome/vue-fontawesome": "^2.0",
     "@nuxt/types": "^2.15",
     "@rollup/plugin-alias": "^2.2",
     "@rollup/plugin-babel": "^5.3",
@@ -66,14 +66,14 @@
     "@rollup/plugin-eslint": "^8.0",
     "@rollup/plugin-node-resolve": "^10.0",
     "@rollup/plugin-replace": "^2.3",
-    "@storybook/addon-actions": "^6.2.9",
-    "@storybook/addon-essentials": "^6.2.9",
-    "@storybook/addon-knobs": "^6.2.9",
-    "@storybook/addon-links": "^6.2.9",
-    "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/vue": "^6.2.9",
+    "@storybook/addon-actions": "^6.2",
+    "@storybook/addon-essentials": "^6.2",
+    "@storybook/addon-knobs": "^6.2",
+    "@storybook/addon-links": "^6.2",
+    "@storybook/preset-typescript": "^3.0",
+    "@storybook/vue": "^6.2",
     "@types/body-scroll-lock": "^2.6",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^26.0",
     "@types/lodash": "^4.14",
     "@types/lodash.get": "^4.4",
     "@types/node": "^15.12",
@@ -82,12 +82,12 @@
     "@typescript-eslint/parser": "^4.26",
     "@vue/babel-preset-app": "^4.5.13",
     "@vue/composition-api": "^1.0.0-rc.7",
-    "@vue/test-utils": "^1.2.0",
-    "babel-loader": "^8.2.2",
+    "@vue/test-utils": "^1.2",
+    "babel-loader": "^8.2",
     "cross-env": "^7.0",
     "eslint": "^7.28",
     "eslint-plugin-vue": "^7.10",
-    "jest": "^27.0.4",
+    "jest": "^27.0",
     "minimist": "^1.2",
     "rollup": "^2.7",
     "rollup-plugin-terser": "^5.3",
