--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": "stylelint-config-standard",
+  "extends": ["stylelint-config-standard-scss"],
   "syntax": "scss",
   "plugins": ["stylelint-scss"],
   "rules": {
