--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "stylelint": "^14.1",
     "stylelint-config-prettier": "^9.0",
     "stylelint-config-standard": "^24.0",
+    "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-scss": "^3.19",
     "tslib": "^2.3",
     "typescript": "4.4",
