--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -204,21 +204,8 @@ jobs:
         with:
           node-version: "12"
 
-      - name: "Get yarn cache directory path"
-        id: "yarn-cache-dir-path"
-        run: 'echo "::set-output name=dir::$(yarn cache dir)"'
-
-      - uses: "actions/cache@v1"
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-node-modules-
-            ${{ runner.os }}-
-
       - name: "Install dependencies"
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: 'yarn install'
+        run: yarn install
 
       - name: "Build"
         run: yarn storybook:build
