--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "lint:styles": "stylelint 'src/**/*.scss'",
     "format": "prettier . --write",
     "storybook:serve": "start-storybook -p 6006",
-    "storybook:build": "build-storybook -s ./src/static"
+    "storybook:build": "build-storybook -s ./src/static",
+    "storybook:deploy": "storybook-to-ghpages"
   },
   "dependencies": {
     "@vueuse/core": "^7.6",
@@ -69,6 +70,7 @@
     "@storybook/addon-knobs": "^6.3",
     "@storybook/addon-links": "^6.3",
     "@storybook/addon-viewport": "^6.4.19",
+    "@storybook/storybook-deployer": "^2.8.10",
     "@storybook/vue3": "^6.4",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/lodash": "^4.14",
