--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -208,6 +208,6 @@ jobs:
         run: yarn install
 
       - name: "Deploy"
-        run: yarn deploy-storybook -- --ci
+        run: yarn storybook:deploy -- --ci
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
