--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: "Setup node"
         uses: "actions/setup-node@v1"
         with:
-          node-version: "12"
+          node-version: "14"
 
       - name: "Get yarn cache directory path"
         id: "yarn-cache-dir-path"
@@ -72,7 +72,7 @@ jobs:
       - name: "Setup node"
         uses: "actions/setup-node@v1"
         with:
-          node-version: "12"
+          node-version: "14"
 
       - name: "Get yarn cache directory path"
         id: "yarn-cache-dir-path"
@@ -92,6 +92,42 @@ jobs:
       - name: "Check linter"
         run: 'yarn lint:styles'
 
+  buildStorybook:
+    name: "Test build Storybook"
+    runs-on: "${{ matrix.operating-system }}"
+
+    strategy:
+      matrix:
+        operating-system: ["ubuntu-latest"]
+      fail-fast: false
+
+    steps:
+      - name: "Checkout"
+        uses: "actions/checkout@v2"
+
+      - name: "Setup node"
+        uses: "actions/setup-node@v1"
+        with:
+          node-version: "14"
+
+      - name: "Get yarn cache directory path"
+        id: "yarn-cache-dir-path"
+        run: 'echo "::set-output name=dir::$(yarn cache dir)"'
+
+      - uses: "actions/cache@v1"
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-node-modules-
+            ${{ runner.os }}-
+      - name: "Install dependencies"
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: 'yarn install'
+
+      - name: "Test build"
+        run: 'yarn storybook:build'
+
   publish-npmjs:
     name: "Build library and publish it to NPM"
     runs-on: "${{ matrix.operating-system }}"
@@ -110,7 +146,7 @@ jobs:
       - name: "Install node"
         uses: "actions/setup-node@v1"
         with:
-          node-version: "12"
+          node-version: "14"
           registry-url: "https://registry.npmjs.org"
 
       - name: "Extract version"
@@ -154,7 +190,7 @@ jobs:
       - name: "Install node"
         uses: "actions/setup-node@v1"
         with:
-          node-version: "12"
+          node-version: "14"
           registry-url: "https://npm.pkg.github.com"
 
       - name: "Extract version"
