--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -92,7 +92,7 @@ jobs:
       - name: "Check linter"
         run: 'yarn lint:styles'
 
-  buildStorybook:
+  build-storybook:
     name: "Test build Storybook"
     runs-on: "${{ matrix.operating-system }}"
 
@@ -131,7 +131,7 @@ jobs:
   publish-npmjs:
     name: "Build library and publish it to NPM"
     runs-on: "${{ matrix.operating-system }}"
-    needs: ["jslint", "stylelint"]
+    needs: ["jslint", "stylelint", "build-storybook"]
 
     strategy:
       matrix:
@@ -217,3 +217,53 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm publish --access public
+
+  publish-storybook:
+    name: "Build Storybook and publish it to Github pages"
+    runs-on: "${{ matrix.operating-system }}"
+    needs: ["jslint", "stylelint", "build-storybook"]
+
+    strategy:
+      matrix:
+        operating-system: ["ubuntu-latest"]
+
+    if: github.event_name == 'push' && contains(github.ref, 'refs/heads/master')
+
+    steps:
+      - name: "Checkout"
+        uses: "actions/checkout@v2"
+        with:
+          persist-credentials: false
+
+      - name: "Setup node"
+        uses: "actions/setup-node@v1"
+        with:
+          node-version: "12"
+
+      - name: "Get yarn cache directory path"
+        id: "yarn-cache-dir-path"
+        run: 'echo "::set-output name=dir::$(yarn cache dir)"'
+
+      - uses: "actions/cache@v1"
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-node-modules-
+            ${{ runner.os }}-
+
+      - name: "Install dependencies"
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: 'yarn install'
+
+      - name: "Build"
+        run: yarn storybook:build
+
+      - name: "Deploy"
+        uses: "JamesIves/github-pages-deploy-action@3.6.2"
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: master
+          FOLDER: storybook-static
+          CLEAN: true
+          TARGET_FOLDER: docs
